--- a/test/fixtures/admins.yml
+++ b/test/fixtures/admins.yml
@@ -1,9 +1,5 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
-  password_digest: MyString
-
-two:
-  name: MyString
-  password_digest: MyString
+taylor:
+  name: Taylor
+  password_digest: foobar
